--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
+
+        <!-- CONTACT -->
+
+        <section id="contact">
+            <h2>Contato</h2>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Digite seu nome">
+                <input type="text" name="" id="" placeholder="Digite seu e-mail">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+                <button>Enviar</button>
+            </form>
+        </section>
+
+        <footer>
+            Copyright &copy; 2022 William Lucas. Todos os direitos reservados.
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
