--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <main>
         <header>
             <div class="logo">
-                LOGO
+                <img src="/img/profile.jpg" alt="">
             </div>
 
             <div class="menu">
                 <nav class="nav-list">
                     <a href="#home">Home</a>
+                    <a href="#skills">Habilidades</a>
+                    <a href="#education">Formação</a>
                     <a href="#projects">Projetos</a>
+                    <a href="#languages">Idiomas</a>
                     <a href="#contact">Contato</a>
                 </nav>
             </div>
@@ -28,10 +31,10 @@
 
         <section id="home">
             <div class="home-info">
-                <h2>Olá, sou William</h2>
+                <h2>Oi, me chamo Cleiton</h2>
                 <span class="home-position">Programador Full Stack</span>
                 <span class="home-resume">
-                    Graduado em Sistemas de Informação, tenho experiência em desenvolviemnto Web (React, Asp, JS e outros), mobile e criação de conteúdo
+                    Formado em Análise e Desenvolvimento de Sistemas, desenvolvo desde landing pages até aplicações completas para a web.
                 </span>
 
                 <button>
@@ -40,7 +43,53 @@
             </div>
 
             <div class="home-img">
-                <img src="./img/xavatar.png" alt="Foto de Perfil">
+                <img src="./img/illustration.png" alt="Figura Programador">
+            </div>
+        </section>
+
+        <!-- Skills -->
+
+        <section id="skills">
+            <h2>Habilidades</h2>
+            <div>
+                <img src="/img/html-logo.png" alt="">
+                <p>HTML</p>
+            </div>
+
+            <div>
+                <img src="/img/css-logo.png" alt="">
+                <p>CSS</p>
+            </div>
+
+            <div>
+                <img src="/img/javascript-logo.png" alt="">
+                <p>Javascript</p>
+            </div>
+
+            <div>
+                <img src="/img/mongodb-logo.png" alt="">
+                <p>MongoDB</p>
+            </div>
+
+            <div>
+                <img src="" alt="">
+                <p>Node.JS</p>
+            </div>
+
+            <div>
+                <img src="" alt="">
+                <p>Bootstrap</p>
+            </div>
+        </section>
+
+        <!-- EDUCATION -->
+
+        <section id="education">
+            <h2>Formação</h2>
+            <div>
+                <img src="" alt="">
+                <p>Análise e Desenvolvimento de Sistemas</p>
+                <p>Estácio de Sá</p>
             </div>
         </section>
 
@@ -91,6 +140,22 @@
             </div>
         </section>
 
+        <!-- Languages -->
+
+        <section id="languages">
+            <h2>Idiomas</h2>
+
+            <div>
+                <img src="" alt="Bandeira do Brasil">
+                <p>Português Nativo</p>
+            </div>
+
+            <div>
+                <img src="" alt="Bandeira dos EUA">
+                <p>Inglês Fluente</p>
+            </div>
+        </section>
+
         <!-- CONTACT -->
 
         <section id="contact">
@@ -104,7 +169,7 @@
         </section>
 
         <footer>
-            Copyright &copy; 2022 William Lucas. Todos os direitos reservados.
+            Copyright &copy; 2023. Todos os direitos reservados.
         </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
