--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
 
         <section id="education">
             <h2>Formação</h2>
-            <div>
-                <img src="" alt="">
-                <p>Análise e Desenvolvimento de Sistemas</p>
-                <p>Estácio de Sá</p>
+            <div class="education-container">
+                <img src="/img/estacio-logo.png" alt="Logo Estácio">
+                <div class="education-description">
+                    <p>Análise e Desenvolvimento de Sistemas</p>
+                    <p>Estácio de Sá</p>
+                </div>
             </div>
         </section>
 
