--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </span>
 
                 <button>
-                    <a href="#" target="_blank">Contate-Me</a>
+                    <a href="#" target="_blank">Currículo</a>
                 </button>
             </div>
 
