--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             </div>
 
             <div>
-                <img src="" alt="">
+                <img src="/img/node-js.png" alt="">
                 <p>Node.JS</p>
             </div>
 
             <div>
-                <img src="" alt="">
+                <img src="/img/bootstrap-logo.png" alt="">
                 <p>Bootstrap</p>
             </div>
         </section>
@@ -148,12 +148,12 @@
             <h2>Idiomas</h2>
 
             <div>
-                <img src="" alt="Bandeira do Brasil">
+                <img src="/img/brazil-flag.png" alt="Bandeira do Brasil">
                 <p>Português Nativo</p>
             </div>
 
             <div>
-                <img src="" alt="Bandeira dos EUA">
+                <img src="/img/usa-flag.png" alt="Bandeira dos EUA">
                 <p>Inglês Fluente</p>
             </div>
         </section>
