--- a/index.html
+++ b/index.html
@@ -104,41 +104,23 @@
 
                     <div class="swiper-slide">
                         <div class="project-img">
-                            <img src="./img/site.png" alt="Foto de um site">
+                            <a href="https://yelpcamp-bryo.onrender.com/">
+                                <img src="./img/yelp-camp.jpg" alt="Foto do projeto YelpCamp">
+                            </a>
                         </div>
 
                         <div class="project-info">
-                            <h2>Websites Modernos</h2>
-                            <p>Criação de Websites modernos e responsivos para qualquer dispositivo.</p>
+                            <h2><a href="https://yelpcamp-bryo.onrender.com/">Yelp Camp</a></h2>
+                            <p>Site desenvolvido através do curso The Web Developer Bootcamp 2022.</p>
+                            <p>HTML, CSS, Javascript, Bootstrap, Node.JS, Express, EJS e Mongoose</p>
                         </div>
                     </div>
 
-                    <div class="swiper-slide">
-                        <div class="project-img">
-                            <img src="./img/shop.png" alt="Foto de uma loja online">
-                        </div>
-
-                        <div class="project-info">
-                            <h2>E-commerce</h2>
-                            <p>Criação de lojas online de qualquer produto.</p>
-                        </div>
-                    </div>
-
-                    <div class="swiper-slide">
-                        <div class="project-img">
-                            <img src="./img/sistema.png" alt="Foto de um sistema">
-                        </div>
-
-                        <div class="project-info">
-                            <h2>Sistemas Completos</h2>
-                            <p>Criação de sistemas completos desde o Back-End até o Front-End.</p>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="swiper-button-next"></div>
+                <!-- <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination"></div> -->
             </div>
         </section>
 
