--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <header>
             <div class="logo">
-                <img src="/img/profile.jpg" alt="">
+                <img src="./img/profile.jpg" alt="">
             </div>
 
             <div class="menu">
@@ -38,7 +38,7 @@
                 </span>
 
                 <button>
-                    <a href="/assets/curriculo-dev.pdf" target="_blank">Currículo</a>
+                    <a href="./assets/curriculo-dev.pdf" target="_blank">Currículo</a>
                 </button>
             </div>
 
@@ -52,7 +52,7 @@
         <section id="skills">
             <h2>Habilidades</h2>
             <div>
-                <img src="/img/html-logo.png" alt="">
+                <img src="./img/html-logo.png" alt="">
                 <p>HTML</p>
             </div>
 
@@ -62,22 +62,22 @@
             </div>
 
             <div>
-                <img src="/img/javascript-logo.png" alt="">
+                <img src="./img/javascript-logo.png" alt="">
                 <p>Javascript</p>
             </div>
 
             <div>
-                <img src="/img/mongodb-logo.png" alt="">
+                <img src="./img/mongodb-logo.png" alt="">
                 <p>MongoDB</p>
             </div>
 
             <div>
-                <img src="/img/node-js.png" alt="">
+                <img src="./img/node-js.png" alt="">
                 <p>Node.JS</p>
             </div>
 
             <div>
-                <img src="/img/bootstrap-logo.png" alt="">
+                <img src="./img/bootstrap-logo.png" alt="">
                 <p>Bootstrap</p>
             </div>
         </section>
@@ -87,7 +87,7 @@
         <section id="education">
             <h2>Formação</h2>
             <div class="education-container">
-                <img src="/img/estacio-logo.png" alt="Logo Estácio">
+                <img src="./img/estacio-logo.png" alt="Logo Estácio">
                 <div class="education-description">
                     <p>Análise e Desenvolvimento de Sistemas</p>
                     <p>Estácio de Sá</p>
@@ -130,12 +130,12 @@
             <h2>Idiomas</h2>
 
             <div>
-                <img src="/img/brazil-flag.png" alt="Bandeira do Brasil">
+                <img src="./img/brazil-flag.png" alt="Bandeira do Brasil">
                 <p>Português Nativo</p>
             </div>
 
             <div>
-                <img src="/img/usa-flag.png" alt="Bandeira dos EUA">
+                <img src="./img/usa-flag.png" alt="Bandeira dos EUA">
                 <p>Inglês Fluente</p>
             </div>
         </section>
