--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <header>
             <div class="logo">
-                <img src="./img/profile.jpg" alt="">
+                <img src="img/profile.jpg" alt="">
             </div>
 
             <div class="menu">
