--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <header>
             <div class="logo">
-                <img src="img/profile.jpg" alt="">
+                <img src="./img/profile.jpg" alt="">
             </div>
 
             <div class="menu">
@@ -57,7 +57,7 @@
             </div>
 
             <div>
-                <img src="/img/css-logo.png" alt="">
+                <img src="./img/css-logo.png" alt="">
                 <p>CSS</p>
             </div>
 
