--- a/index.html
+++ b/index.html
@@ -144,12 +144,30 @@
 
         <section id="contact">
             <h2>Contato</h2>
-            <form action="">
-                <input type="text" name="" id="" placeholder="Digite seu nome">
-                <input type="text" name="" id="" placeholder="Digite seu e-mail">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
-                <button>Enviar</button>
-            </form>
+
+            <div class="redes">
+                <div>
+                    <a href="mailto:cleiton.siqueira.266@gmail.com">
+                        <img src="./img/gmail-logo.png" alt="Logotipo Gmail">
+                        <p>E-Mail</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="https://www.linkedin.com/in/cleiton-siqueira-3ba301153/">
+                        <img src="./img/linkedin-logo.png" alt="Logotipo LinkedIn">
+                        <p>LinkedIn</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="https://github.com/ClayS21">
+                        <img src="./img/github-logo.png" alt="Logotipo GitHub">
+                        <p>GitHub</p>
+                    </a>
+                </div>
+
+            </div>
         </section>
 
         <footer>
